@@ -609,9 +609,9 @@ BEGIN
     LTEXT           "Notes:",IDC_STATIC,6,115,22,8
     EDITTEXT        IDC_NOTES,52,114,152,74,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "&Password History...",IDC_PWHIST,219,144,48,21,
+    PUSHBUTTON      "&Password History",IDC_PWHIST,211,133,61,14,
                     BS_MULTILINE
-    PUSHBUTTON      "&More >>",IDC_MORE,210,173,64,14
+    PUSHBUTTON      "&More >>",IDC_MORE,210,174,64,14
     DEFPUSHBUTTON   "OK",IDOK,210,33,64,14
     PUSHBUTTON      "Cancel",IDCANCEL,210,49,64,14
     PUSHBUTTON      "Help (F1)",ID_HELP,210,65,64,14
@@ -640,6 +640,11 @@ BEGIN
     EDITTEXT        IDC_LTIME,104,301,106,10,ES_READONLY | NOT WS_BORDER
     CONTROL         "",IDC_BOTTOM_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,14,322,251,1
+    LTEXT           "Status:",IDC_STATIC,221,148,23,8
+    CTEXT           "On",IDC_PWHSTATUS,246,148,16,8
+    LTEXT           "Max:",IDC_STATIC,228,159,16,8
+    CTEXT           "255",IDC_PWHMAX,246,159,16,8
+    GROUPBOX        "",IDC_STATIC,208,127,68,44
 END
 
 IDD_QUERYSETDEF DIALOG  0, 0, 255, 102
